[CSS] Fix links too dark in dark mode.

--- a/style/css/f4inx.css
+++ b/style/css/f4inx.css
@@ -497,6 +497,9 @@ a.reversefootnote {
       border-bottom: 2px solid white;
     }
   }
+  a {
+  --links-color: aqua;
+  }
   .schematic {
     filter: invert();
   }
